[project]
name = "youtube-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.5.1",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
    "mcp[cli]>=1.9.1",
    "openai>=1.82.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytubefix>=9.0.1",
    "streamlit>=1.45.1",
]
